Handle SOE as a result of mapping ambiguity