@@ -1,8 +1,5 @@
 package org.sinytra.connector.transformer;
 
-import org.sinytra.adapter.patch.analysis.selector.AnnotationHandle;
-import org.sinytra.adapter.patch.analysis.selector.AnnotationValueHandle;
-import org.sinytra.connector.transformer.jar.IntermediateMapping;
 import net.minecraftforge.fart.api.ClassProvider;
 import net.minecraftforge.fart.internal.ClassProviderImpl;
 import net.minecraftforge.fart.internal.EnhancedClassRemapper;
@@ -25,8 +22,12 @@ import org.objectweb.asm.tree.ClassNode;
 import org.objectweb.asm.tree.FieldNode;
 import org.objectweb.asm.tree.InvokeDynamicInsnNode;
 import org.objectweb.asm.tree.LdcInsnNode;
+import org.objectweb.asm.tree.MethodInsnNode;
 import org.objectweb.asm.tree.MethodNode;
+import org.sinytra.adapter.patch.analysis.selector.AnnotationHandle;
+import org.sinytra.adapter.patch.analysis.selector.AnnotationValueHandle;
 import org.sinytra.adapter.patch.util.MethodQualifier;
+import org.sinytra.connector.transformer.jar.IntermediateMapping;
 import org.spongepowered.asm.mixin.gen.AccessorInfo;
 
 import java.io.IOException;
@@ -41,6 +42,9 @@ import java.util.function.Consumer;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Stream;
+
+import static org.objectweb.asm.Opcodes.ACC_PRIVATE;
+import static org.objectweb.asm.Opcodes.ACC_STATIC;
 
 public final class OptimizedRenamingTransformer extends RenamingTransformer {
     private static final String CLASS_DESC_PATTERN = "^L[a-zA-Z0-9/$_]+;$";
@@ -93,10 +97,28 @@ public final class OptimizedRenamingTransformer extends RenamingTransformer {
                     }
                 }
             }
+            avoidAmbigousMappingRecursion(node, method);
         }
         for (FieldNode field : node.fields) {
             field.value = postProcessRemapper.mapValue(field.value);
         }
+    }
+
+    private void avoidAmbigousMappingRecursion(ClassNode classNode, MethodNode method) {
+        if (isOverridenMethod(classNode, method)) {
+            for (AbstractInsnNode insn : method.instructions) {
+                if (insn instanceof MethodInsnNode minsn && minsn.owner.equals(classNode.name) && minsn.name.equals(method.name) && minsn.desc.equals(method.desc)) {
+                    method.instructions.set(minsn, new MethodInsnNode(Opcodes.INVOKESPECIAL, classNode.superName, minsn.name, minsn.desc, minsn.itf));
+                }
+            }
+        }
+    }
+
+    private boolean isOverridenMethod(ClassNode classNode, MethodNode method) {
+        return classNode.superName != null && ((MixinAwareEnhancedRemapper) this.remapper).getUpstreamProvider().getClass(classNode.superName)
+            .flatMap(m -> m.getMethod(method.name, method.desc))
+            .filter(m -> (m.getAccess() & (ACC_PRIVATE | ACC_STATIC)) == 0)
+            .isPresent();
     }
 
     private void processMixinAnnotation(AnnotationNode annotation, PostProcessRemapper postProcessRemapper) {
@@ -104,9 +126,9 @@ public final class OptimizedRenamingTransformer extends RenamingTransformer {
         // Take care of regex method specifiers
         handle.<List<String>>getValue("method")
             .map(AnnotationValueHandle::get)
-            .filter(list -> list.size() == 1 && list.get(0).startsWith("desc="))
+            .filter(list -> list.size() == 1 && list.getFirst().startsWith("desc="))
             .ifPresent(h -> {
-                String method = h.get(0);
+                String method = h.getFirst();
                 Matcher matcher = REGEX_DESC_PATTERN.matcher(method);
                 if (matcher.matches()) {
                     String className = matcher.group(1);
@@ -250,6 +272,10 @@ public final class OptimizedRenamingTransformer extends RenamingTransformer {
         public MixinAwareEnhancedRemapper(ClassProvider classProvider, IMappingFile map, IntermediateMapping flatMappings, Consumer<String> log) {
             super(classProvider, map, log);
             this.flatMappings = flatMappings;
+        }
+
+        public ClassProvider getUpstreamProvider() {
+            return ((IntermediaryClassProvider) this.classProvider).upstream;
         }
 
         @Override
